--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -126,6 +126,7 @@ main h2 strong {
     gap: 16px;
     border-radius: 12px;
     margin-bottom: 12px;
+    box-shadow: var(--shadow);
 }
 
 .pontuacao strong {
@@ -149,7 +150,8 @@ main button {
 
     font-size: 18px;
     font-weight: 500;
-    transition: background 0.7s;
+    transition: background 0.3s;
+    box-shadow: var(--shadow);
 }
 
 main button:hover {
